# transfermtl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  codebase_plan.md  environment-dev.yml  environment.yml  plan.txt  pyproject.toml
.github/workflows/: ci.yml
configs/_shared/: _lock.yaml  bootstrap.yaml  encoder_gcn.yaml  preprocess.yaml  train_default.yaml
outputs/manifests/: wave1_complete.json  wave2_a2_complete.json  wave2_a3_complete.json  wave2_a4_complete.json  wave2_a5_complete.json  wave3_a6_complete.json  wave3_a7_complete.json
scripts/: compute_benefits.py  compute_gradients.py  compute_indices.py  compute_partitions.py  inspect_pilot.py  launch_pilot.sh  pilot_decision.py  prepare_dataset.py  select_pilot_pairs.py  train_all_task_mtl.py  train_pairwise_mtl.py  train_stl.py
src/transfermtl/: __init__.py
src/transfermtl/analysis/: __init__.py
src/transfermtl/architecture/: __init__.py
src/transfermtl/baselines/: __init__.py
src/transfermtl/benefits/: __init__.py  aggregate.py  delta.py  perf.py
src/transfermtl/bootstrap/: __init__.py  calibration.py  hierarchical.py  percentile.py  seed_mixing.py  within_region.py
src/transfermtl/data/: __init__.py  datasets.py  featurize.py  fingerprints.py  manifest.py  scaffolds.py  splits.py  standardize.py
src/transfermtl/eval/: __init__.py
src/transfermtl/gradients/: __init__.py  affinity.py  extract.py  io.py  trajectory.py
src/transfermtl/indices/: __init__.py  cancellation.py  heterogeneity_index.py  io.py  sign_heterogeneity.py
src/transfermtl/null/: io.py  (+3 more)
templates/: pilot_decision_template.md
tests/: conftest.py  test_benefits.py  test_bootstrap.py  test_data_pipeline.py  test_gradients.py  test_indices.py  test_models.py  test_null.py  test_partition.py  test_pilot_e2e.py  test_synthetic_fixture.py  test_training.py  test_utils.py  test_validity.py
tests/synthetic_fixture/: build.py  featurize.py
waves/: 00_overview.md  wave1_foundation.md  wave2_building_blocks.md  wave3_measurement_pilot.md  wave4_postpilot.md  wave5_utility.md  wave6_assembly.md
(+35 files in other folders)
