[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transfermtl"
version = "0.0.1"
description = "Transfer Sign Heterogeneity in Multi-Task Learning"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "tsh-mtl" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "pandera>=0.20",
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "torch>=2.2",
    "rdkit>=2024.3.1",
    "torch_geometric>=2.5",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "ruff>=0.5",
    "black>=24.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "types-PyYAML",
]
wandb = ["wandb>=0.16"]
chem = ["rdkit>=2024.3.1"]
graph = ["torch_geometric>=2.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/transfermtl"]

# rdkit and torch_geometric ship no type stubs; calls into them surface
# no-untyped-call / attr-defined / no-any-return spuriously. Disable those
# error codes only for the files that interact with these libs.
[[tool.mypy.overrides]]
module = [
    "transfermtl.data.standardize",
    "transfermtl.data.scaffolds",
    "transfermtl.data.fingerprints",
    "transfermtl.data.featurize",
]
disable_error_code = ["no-untyped-call", "attr-defined", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
